--- a/ANGULAR/guess-the-number/src/app/guess-the-number/guess-the-number.component.html
+++ b/ANGULAR/guess-the-number/src/app/guess-the-number/guess-the-number.component.html
@@ -1,1 +1,26 @@
-<p>guess-the-number works!</p>
+<div class="game-container">
+  <h1>Guess the Number Game</h1>
+  <p>Guess the number between 1 and 100!</p>
+  <div *ngIf="!gameOver">
+    <label for="guess">Your guess: </label>
+    <input
+      type="number"
+      id="guess"
+      [(ngModel)]="guessedNumber"
+      [disabled]="gameOver"
+      min="1"
+      max="100"
+      placeholder="Enter a number"
+    />
+    <button (click)="submitGuess()" [disabled]="!isValidGuess(guessedNumber)">
+      Submit Guess
+    </button>
+    <p>Attempts left: {{ attempsLeft }}</p>
+  </div>
+  <div *ngIf="feedbackMessage" class="feedback">
+    <p>{{ feedbackMessage }}</p>
+  </div>
+  <div *ngIf="gameOver">
+    <button (click)="resetGame()">Play again</button>
+  </div>
+</div>
