--- a/ANGULAR/analyzer-clock/src/app/clock/clock.component.html
+++ b/ANGULAR/analyzer-clock/src/app/clock/clock.component.html
@@ -8,4 +8,13 @@
     {{ num.number }}
   </div>
   <div className="center"></div>
+  <div class="hand hour" [style.transform]="'rotate(' + hours + 'deg)'"></div>
+  <div
+    class="hand minute"
+    [style.transform]="'rotate(' + minutes + 'deg)'"
+  ></div>
+  <div
+    class="hand second"
+    [style.transform]="'rotate(' + seconds + 'deg)'"
+  ></div>
 </div>
